Added literature review and introduction

--- a/index.qmd
+++ b/index.qmd
@@ -70,7 +70,7 @@ Article: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC403858/#:~:text=The%20logr
 Summary: This article goes into depth on what the log-rank test is that I mentioned above. It is used to compare the survival rates between two groups. The log-rank test gives a comparison at some arbitraty point in the point, instead of comparing the whole survival time to one another. The log-rank test is also based on the same assumptions as the Kaplan test. The log-rank test is also more likely to detect a different in the groups when the risk for the outcome of interest is higher in one of the groups. 
 
 ### Halley's Week 3
-Article 1: http://dl.nsf.gov.lk/bitstream/handle/1/6320/Jnsf-37(1)-41.pdf?sequence=2Links to an external site.
+Article 1: http://dl.nsf.gov.lk/bitstream/handle/1/6320/Jnsf-37(1) -41.pdf?sequence=2Links to an external site.
 
 Summary: The goal of this study is to see whether hazard ration, relative risk, and other estimates made by the Cox Proportional Hazards model are biased when the basic assumptions of the model are violated. This is very important because whenever regression models are run, not just Cox Proportional Hazards models, many times we take for granted that the assumptions of the model are met. This can lead to incorrect conclusions and predictions. The Cox model assumes that the hazard ratios remain constant over time. If this is violated, then the model may falsely suggest that a variable is significant or vice versa. This study showed an example where the hazards ratio is not constant over time. An example was with the age of smokers and the RR as age increased. As there was an increase in cumulative smoking exposure, the RR decrease after 50. It was also addressed how in the Cox PH model, there is increased emphasis on the Relative Risk. This is convenient because it doesn't require estimating background information. They first examined survival curves by smoking status and then compared a simulated data set could define mortality to a real data set. They found that single minded focus on PH models have hindered the development of other models in epidemiologic data. Sometimes hazard functions, rather than the rate of hazard functions may be a better alternative. 
 
@@ -91,17 +91,14 @@ Article 2:
 https://www.sciencedirect.com/science/article/pii/S0001457509002619
 
 Summary: This article uses a cox proprtional hazards model to study the relationship between sleepiness and prediction of a driver's impairment. The approach was to only use the parametric part of the hazard function to study changes in risk of a critical event
-(lane change) due to changes in the explanatory variables (indicators). The probability of a critical event is proportional to the hazard function and therefore the changes in risk can be estimated by changes in the hazard function. All co-variates were statistically signifcant.
+(lane change) due to changes in the explanatory variables (indicators). The probability of a critical event is proportional to the hazard function and therefore the changes in risk can be estimated by changes in the hazard function. All co-variates were statistically significant.
 
 ## Introduction
 
-This is an introduction to Cox Proportional Hazards regression, which is a statistical method used for survival analysis. It uses a semi-parametric estimator that focuses on estimating the hazard function which represents the instantaneous risk of an event occurring at a given time. It's mostly used in industries such as medical, epidemiology and various other fields where they need to analyze data pertaining to a failure or an event such as death or relapse. [Gonzalez-Dominguez] The purpose of Cox Proportional Hazards regression is to find the relationship between one or more independent variables and the hazard function while allowing for the exploration in non-linearity and time-varying effects. [W.W.M Abeysekera] The dependent variable in a hazard model consist of two parts, the first part is the event indicator and the second part is a measure of time. [Jane E.Miller] The purpose of this paper is to take a dive deeper into this regression model by analyzing the (insert data set here). This data set will use the regression to [add pertaining information here]. 
+Cox Proportional Hazard model is a statistical method that has been used for survival analysis and epidemiological research. The model emerged in 1972 by Sir David R. Cox. The model provides researchers with a robust framework for understanding time-to-event data. It uses a semi-parametric estimator that focuses on estimating the hazard function which represents the instantaneous risk of an event occurring at a given time. The purpose of Cox Proportional Hazards regression is to find the relationship between one or more independent variables and the hazard function while allowing for the exploration in non-linearity and time-varying effects[1]. The dependent variable in a hazard model consist of two parts, the first part is the event indicator and the second part is a measure of time. The model provides invaluable insights across diverse fields such as healthcare, engineering, social sciences, and beyond. It unravels the relationship between covariates and the hazard rate which represents the instantaneous risk of an event occurring at a given time. By analyzing how the various predictors influence the hazard rate over time, researchers can gain a deeper understanding of the factors that impact outcomes such as patient survival, equipment failure or the likelihood of an individual re-offering. There are studies using the model to gain more insight on heroin addicts and if they were getting methadone treatments[1]. There are even some studies that found the predictive analysis of the energy consumption of healthcare buildings and predict the excessive energy[2]. The Cox Proportional Hazard model can even be used in predicting the Mean Up Time of cutting tools inserts based on a single cutting parameter, cutting speed[3]. By being able to  study and analyze this, the Cox Proportional Hazard model has become a vital tool for addressing a wide range of research questions. The key strength when it comes to working with Cox Proportional Hazard model is that it is able to handle censor data. Since most studies utilize real-world scenarios such as in a biomedical study conducted by Ben-Assuli, Ramon-Gonen, Heart, Jacobi and Klempfner [4] where study the post discharge survival analysis of CHF patients, not all studies completed their observations by the end of the study. For example in the CHF patients, the authors also utilized shared frailty correction technique in order to account for unobserved or variability amount subjects in the study that can effect their likelihood of an event. Although the diversity with the Cox Proprortional Hazard model is myraid, it still has its limitations. Not every data set is fit for the model and can present more issues when using the model to conduct resarch. For this paper, we have decided to explore a cancer data set provided by SEER (National Cancer Institute Surveillance, Epidemiology and End Results Program). We will be analyzing the variables such as site record, sex, age record, COD to site record, death classification, and ethnicity. (Once report is complete should also dive into what we are trying to accomplish and study) 
 
-(This is a note for myself so I know where I got each information from so I can properly cite it later.)
-Gonzalez-Dominguez Cox Proportional Hazards model used for predictive analysis of the energy consumption of healthcare buildings. 
-W.W.M Abeysekera Use of Schoenfeld’s global test to test the proportional hazards
-assumption in the Cox proportional hazards model: an application
-to a clinical study
+###Note we will be using the Seer cancer dataset. Please look at the github uploaded documents to take a look at the dataset we have chosen. We are still looking at the variables to consider, but we have narrowed it down to the what's shown on the file as well as race and ethnicity. This data is provided by the National Cancer Institute Surveillance, Epidemiology and End Results Program. 
+
 
 
 ## Methods
@@ -161,3 +158,11 @@ ggplot1 = murders %>% ggplot(mapping = aes(x=population/10^6, y=total))
 ### Conlusion
 
 ## References
+
+[1]http://dl.nsf.gov.lk/bitstream/handle/1/6320/Jnsf-37(1)-41.pdf?sequence=2L
+
+[2]https://www.sciencedirect.com/science/article/abs/pii/S1532046423000618
+
+[3]https://www.mdpi.com/2504-4494/4/1/27
+
+[4]https://www.sciencedirect.com/science/article/abs/pii/S1532046423000618
