added lit review and intro

--- a/index.qmd
+++ b/index.qmd
@@ -70,7 +70,7 @@ Article: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC403858/#:~:text=The%20logr
 Summary: This article goes into depth on what the log-rank test is that I mentioned above. It is used to compare the survival rates between two groups. The log-rank test gives a comparison at some arbitraty point in the point, instead of comparing the whole survival time to one another. The log-rank test is also based on the same assumptions as the Kaplan test. The log-rank test is also more likely to detect a different in the groups when the risk for the outcome of interest is higher in one of the groups. 
 
 ### Halley's Week 3
-Article 1: http://dl.nsf.gov.lk/bitstream/handle/1/6320/Jnsf-37(1) -41.pdf?sequence=2Links to an external site.
+Article 1: http://dl.nsf.gov.lk/bitstream/handle/1/6320/Jnsf-31 -41.pdf?sequence=2Links to an external site.
 
 Summary: The goal of this study is to see whether hazard ration, relative risk, and other estimates made by the Cox Proportional Hazards model are biased when the basic assumptions of the model are violated. This is very important because whenever regression models are run, not just Cox Proportional Hazards models, many times we take for granted that the assumptions of the model are met. This can lead to incorrect conclusions and predictions. The Cox model assumes that the hazard ratios remain constant over time. If this is violated, then the model may falsely suggest that a variable is significant or vice versa. This study showed an example where the hazards ratio is not constant over time. An example was with the age of smokers and the RR as age increased. As there was an increase in cumulative smoking exposure, the RR decrease after 50. It was also addressed how in the Cox PH model, there is increased emphasis on the Relative Risk. This is convenient because it doesn't require estimating background information. They first examined survival curves by smoking status and then compared a simulated data set could define mortality to a real data set. They found that single minded focus on PH models have hindered the development of other models in epidemiologic data. Sometimes hazard functions, rather than the rate of hazard functions may be a better alternative. 
 
