Fixed grammatical errors

--- a/index.qmd
+++ b/index.qmd
@@ -95,7 +95,7 @@ Summary: This article uses a cox proprtional hazards model to study the relation
 
 ## Introduction
 
-Cox Proportional Hazard model is a statistical method that has been used for survival analysis and epidemiological research. The model emerged in 1972 by Sir David R. Cox. The model provides researchers with a robust framework for understanding time-to-event data. It uses a semi-parametric estimator that focuses on estimating the hazard function which represents the instantaneous risk of an event occurring at a given time. The purpose of Cox Proportional Hazards regression is to find the relationship between one or more independent variables and the hazard function while allowing for the exploration in non-linearity and time-varying effects[1]. The dependent variable in a hazard model consist of two parts, the first part is the event indicator and the second part is a measure of time. The model provides invaluable insights across diverse fields such as healthcare, engineering, social sciences, and beyond. It unravels the relationship between covariates and the hazard rate which represents the instantaneous risk of an event occurring at a given time. By analyzing how the various predictors influence the hazard rate over time, researchers can gain a deeper understanding of the factors that impact outcomes such as patient survival, equipment failure or the likelihood of an individual re-offering. There are studies using the model to gain more insight on heroin addicts and if they were getting methadone treatments[1]. There are even some studies that found the predictive analysis of the energy consumption of healthcare buildings and predict the excessive energy[2]. The Cox Proportional Hazard model can even be used in predicting the Mean Up Time of cutting tools inserts based on a single cutting parameter, cutting speed[3]. By being able to  study and analyze this, the Cox Proportional Hazard model has become a vital tool for addressing a wide range of research questions. The key strength when it comes to working with Cox Proportional Hazard model is that it is able to handle censor data. Since most studies utilize real-world scenarios such as in a biomedical study conducted by Ben-Assuli, Ramon-Gonen, Heart, Jacobi and Klempfner [4] where study the post discharge survival analysis of CHF patients, not all studies completed their observations by the end of the study. For example in the CHF patients, the authors also utilized shared frailty correction technique in order to account for unobserved or variability amount subjects in the study that can effect their likelihood of an event. Although the diversity with the Cox Proprortional Hazard model is myraid, it still has its limitations. Not every data set is fit for the model and can present more issues when using the model to conduct resarch. For this paper, we have decided to explore a cancer data set provided by SEER (National Cancer Institute Surveillance, Epidemiology and End Results Program). We will be analyzing the variables such as site record, sex, age record, COD to site record, death classification, and ethnicity. (Once report is complete should also dive into what we are trying to accomplish and study) 
+Cox Proportional Hazard model is a statistical method that has been used for survival analysis and epidemiological research. The model emerged in 1972 by Sir David R. Cox. The model provides researchers with a robust framework for understanding time-to-event data. It uses a semi-parametric estimator that focuses on estimating the hazard function which represents the instantaneous risk of an event occurring at a given time. The purpose of Cox Proportional Hazards regression is to find the relationship between one or more independent variables and the hazard function while allowing for the exploration in non-linearity and time-varying effects[1]. The dependent variable in a hazard model consist of two parts, the first part is the event indicator and the second part is a measure of time. The model provides invaluable insights across diverse fields such as healthcare, engineering, social sciences, and beyond. It unravels the relationship between covariates and the hazard rate which represents the instantaneous risk of an event occurring at a given time. By analyzing how the various predictors influence the hazard rate over time, researchers can gain a deeper understanding of the factors that impact outcomes such as patient survival, equipment failure or the likelihood of an individual re-offering. There are studies using the model to gain more insight on heroin addicts and if they were getting methadone treatments[1]. There are even some studies that found the predictive analysis of the energy consumption of healthcare buildings and predict the excessive energy[2]. The Cox Proportional Hazard model can even be used in predicting the Mean Up Time of cutting tools inserts based on a single cutting parameter, cutting speed[3]. By being able to  study and analyze this, the Cox Proportional Hazard model has become a vital tool for addressing a wide range of research questions. The key strength when it comes to working with Cox Proportional Hazard model is that it is able to handle censor data. Since most studies utilize real-world scenarios such as in a biomedical study conducted by Ben-Assuli, Ramon-Gonen, Heart, Jacobi and Klempfner [4] where study the post discharge survival analysis of CHF patients, not all studies completed their observations by the end of the study. For example in the CHF patients, the authors also utilized shared frailty correction technique in order to account for unobserved or variability amount subjects in the study that can effect their likelihood of an event. Although the diversity with the Cox Proportional Hazard model is myriad, it still has its limitations. Not every data set is fit for the model and can present more issues when using the model to conduct research. For this paper, we have decided to explore a cancer data set provided by SEER (National Cancer Institute Surveillance, Epidemiology and End Results Program). We will be analyzing the variables such as site record, sex, age record, COD to site record, death classification, and ethnicity. (Once report is complete should also dive into what we are trying to accomplish and study) 
 
 ###Note we will be using the Seer cancer dataset. Please look at the github uploaded documents to take a look at the dataset we have chosen. We are still looking at the variables to consider, but we have narrowed it down to the what's shown on the file as well as race and ethnicity. This data is provided by the National Cancer Institute Surveillance, Epidemiology and End Results Program. 
 
